--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Solo, a Jekyll Theme
-tag_text: Solo
-description: Solo is a Jekyll theme that supports single-page websites only, but supports them well. Yes, it’s responsive.
+title: Singapore gophers
+tag_text: Singapore Gophers
+description: Singapore Gophers is a community of programmer, hobbyist who use Golang in Singapore
 
 # Build settings
 markdown: kramdown
